--- a/gui.ui
+++ b/gui.ui
@@ -32,7 +32,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Cut It</string>
+   <string>Product Manager</string>
   </property>
   <property name="toolTipDuration">
    <number>-1</number>
