--- a/product.ui
+++ b/product.ui
@@ -54,9 +54,9 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>10</y>
+     <y>40</y>
      <width>771</width>
-     <height>721</height>
+     <height>691</height>
     </rect>
    </property>
    <property name="mouseTracking">
@@ -99,7 +99,7 @@
       <x>0</x>
       <y>0</y>
       <width>752</width>
-      <height>719</height>
+      <height>689</height>
      </rect>
     </property>
    </widget>
@@ -159,6 +159,28 @@
    </property>
    <property name="textFormat">
     <enum>Qt::RichText</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="productName">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>10</y>
+     <width>771</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border: 1px solid black; font: bold; font-size: 16px</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="textFormat">
+    <enum>Qt::RichText</enum>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
