--- a/resources.qrc
+++ b/resources.qrc
@@ -2,6 +2,11 @@
   <qresource prefix="logo">
     <file alias="logo">resources/logo.png</file>
   </qresource>
+  <qresource prefix="kaw01">
+    <file alias="kaw01_4880">resources/kaw01_4880.png</file>
+    <file alias="kaw01_4880new">resources/kaw01_4880new.png</file>
+    <file alias="kaw01_4880prom">resources/kaw01_4880prom.png</file>
+  </qresource>
   <qresource prefix="baner">
     <file alias="newproduct">resources/new.png</file>
     <file alias="promproduct">resources/prom.png</file>
